# rust-simple-signal

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
examples/: readme_example.rs  simple.rs
src/: lib.rs
